# GTS-GamesTaskScheduler

./: .gitignore  CMakeLists.txt
cmake/: gen_xcode.sh
source/gts/include/gts/containers/: AlignedAllocator.h
source/gts/include/gts/macro_scheduler/: Node.h
source/gts/include/gts/platform/: Assert.h  Machine.h  Thread.h
source/gts/source/micro_scheduler/: Backoff.h
source/gts/source/platform/_win32/: Memory_Win32.cpp  Thread_Win32.cpp
